# ImGuiApp

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
dependencies/: CMakeLists.txt
dependencies/glew-2.1.0/: glew.pc
dependencies/imgui-1.90.6-docking/: CMakeLists.txt
dependencies/pbPlots/: CMakeLists.txt
dependencies/spdlog/: CMakeLists.txt  SPDLOG_BUILD.cpp
docs/: Doxyfile
docs/html/: _app_8cpp.html  _app_8h.html  _app_8h_source.html  _entry_point_8h.html  _entry_point_8h_source.html  _i_g_a___logger_8h_source.html  _layer_8h.html  _layer_8h_source.html  _logger_8cpp.html  _logger_8h.html  _logger_8h_source.html  _random_8cpp.html  _random_8h.html  _random_8h_source.html  _timer_8h.html  _timer_8h_source.html  annotated.html  annotated_dup.js  class_im_gui_app_1_1_app-members.html  class_im_gui_app_1_1_app.html  class_im_gui_app_1_1_i_g_a___logger-members.html  class_im_gui_app_1_1_i_g_a___logger.html  class_im_gui_app_1_1_layer-members.html  class_im_gui_app_1_1_layer.html  class_im_gui_app_1_1_logger-members.html  class_im_gui_app_1_1_logger.html  class_im_gui_app_1_1_random-members.html  class_im_gui_app_1_1_random.html  class_im_gui_app_1_1_scoped_timer-members.html  class_im_gui_app_1_1_scoped_timer.html  class_im_gui_app_1_1_timer-members.html  class_im_gui_app_1_1_timer.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  (+12 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  functions_5.js  functions_9.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: _app_8h.tex  _app_8h_source.tex  annotated.tex  class_im_gui_app_1_1_app.tex  class_im_gui_app_1_1_layer.tex  files.tex  index.tex  refman.tex
include/: App.h  EntryPoint.h  IGA_Logger.h  Layer.h  Logger.h  Random.h  Timer.h
include/App/: Layer.h  Random.h
src/: App.cpp  IGA_Logger.cpp  Logger.cpp  Random.cpp  main.cpp
src/App/: Random.cpp
